# sqlx-mysql-demo

./: .env.sample  Cargo.toml  LICENSE  README.md  docker-compose.yml
docker/db/: Dockerfile
migrations/: 20250417000000_create_todos_table.sql
src/: main.rs
src/fixtures/: test_add_todo.sql  test_complete_todo.sql  test_list_todos.sql
