[package]
name = "sqlx-mysql-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "=0.8.5", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
bigdecimal = { version = "0.4", features = ["serde"] }
